# shared-memory-based-handy-communication-manager

./: .clang-format  .gitignore  CMakeLists.txt  Doxyconfig  Doxyconfig_jp  README.md  generate_coverage.sh  test_ci_locally.sh  test_gist_badge.sh
.github/workflows/: ci.yml
docs/: all__0_8js_source.html  all__1_8js_source.html  all__2_8js_source.html  all__3_8js_source.html  all__4_8js_source.html  all__5_8js_source.html  all__6_8js_source.html  all__7_8js_source.html  all__8_8js_source.html  annotated.html  class_publisher_bool-members.html  class_publisher_bool.html  class_publisher_float-members.html  class_publisher_float.html  class_publisher_int-members.html  class_publisher_int.html  class_ring_buffer_test-members.html  class_ring_buffer_test.html  class_shared_memory_posix_test-members.html  class_shared_memory_posix_test.html  class_subscriber_bool-members.html  class_subscriber_bool.html  class_subscriber_float-members.html  class_subscriber_float.html  class_subscriber_int-members.html  class_subscriber_int.html  classes.html  classes__0_8js_source.html  classes__1_8js_source.html  classes__2_8js_source.html  classes__3_8js_source.html  classirlab_1_1shm_1_1_action_client-members.html  classirlab_1_1shm_1_1_action_client.html  classirlab_1_1shm_1_1_action_server-members.html  classirlab_1_1shm_1_1_action_server.html  classirlab_1_1shm_1_1_publisher-members.html  classirlab_1_1shm_1_1_publisher.html  classirlab_1_1shm_1_1_publisher_3_01std_1_1vector_3_01_t_01_4_01_4-members.html  classirlab_1_1shm_1_1_publisher_3_01std_1_1vector_3_01_t_01_4_01_4.html  classirlab_1_1shm_1_1_ring_buffer-members.html  (+183 more)
docs/docs_jp/: all__0_8js_source.html  all__3_8js_source.html  all__4_8js_source.html  all__7_8js_source.html  all__9_8js_source.html  annotated.html  class_publisher_bool-members.html  class_publisher_bool.html  class_publisher_float-members.html  class_publisher_float.html  class_publisher_int-members.html  class_publisher_int.html  class_ring_buffer_test-members.html  class_ring_buffer_test.html  class_shared_memory_posix_test-members.html  class_shared_memory_posix_test.html  class_subscriber_bool-members.html  class_subscriber_bool.html  class_subscriber_float-members.html  class_subscriber_float.html  class_subscriber_int-members.html  class_subscriber_int.html  classes.html  classirlab_1_1shm_1_1_action_client-members.html  classirlab_1_1shm_1_1_action_client.html  classirlab_1_1shm_1_1_action_server-members.html  classirlab_1_1shm_1_1_action_server.html  classirlab_1_1shm_1_1_publisher-members.html  classirlab_1_1shm_1_1_publisher.html  classirlab_1_1shm_1_1_publisher_3_01std_1_1vector_3_01_t_01_4_01_4-members.html  classirlab_1_1shm_1_1_ring_buffer-members.html  (+160 more)
docs_jp/: all__1_8js_source.html  all__2_8js_source.html  all__5_8js_source.html  all__6_8js_source.html  all__8_8js_source.html  annotated.html  class_publisher_float.html  class_subscriber_bool-members.html  class_subscriber_bool.html  class_subscriber_float.html  class_subscriber_int-members.html  class_subscriber_int.html  classes__0_8js_source.html  classes__1_8js_source.html  classes__2_8js_source.html  classes__3_8js_source.html  classirlab_1_1shm_1_1_action_client-members.html  classirlab_1_1shm_1_1_action_server-members.html  classirlab_1_1shm_1_1_action_server.html  classirlab_1_1shm_1_1_publisher.html  classirlab_1_1shm_1_1_publisher_3_01std_1_1vector_3_01_t_01_4_01_4-members.html  classirlab_1_1shm_1_1_ring_buffer-members.html  classirlab_1_1shm_1_1_service_client-members.html  classirlab_1_1shm_1_1_shared_memory-members.html  classirlab_1_1shm_1_1_shared_memory_posix-members.html  classirlab_1_1shm_1_1_subscriber.html  classirlab_1_1shm_1_1_subscriber_3_01std_1_1vector_3_01_t_01_4_01_4-members.html  dir_25e09d7ecc0357669a5e7670321f71c9.html  dir_326cfef2590dc603900f438a2dc715be.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_6fd7432206f8a283f03c1623e8218ecf.html  dir_8da759603479e9494e040323f19c7fb7.html  dir_93789380e0b43472fce3659c97aa78be.html  dir_9f056feff8d55310b7f7cfe7da1ea7a2.html  dir_d42185578627d3f0e15099fa1956e291.html  dir_dedda661d52f15c544835a0f3f778e7c.html  docs_2dynsections_8js_source.html  docs_2jquery_8js_source.html  docs_2menu_8js_source.html  docs__jp_2menu_8js_source.html  (+52 more)
manual/: index.md  index_en.md  index_jp.md  introduction_en.md  introduction_jp.md  quickstart_en.md  quickstart_jp.md  reference_en.md  reference_jp.md  spec_en.md  spec_jp.md  troubleshooting_en.md  troubleshooting_jp.md  tutorials_c_language_en.md  tutorials_c_language_jp.md  tutorials_en.md  tutorials_introduction_en.md  tutorials_introduction_jp.md  tutorials_jp.md  tutorials_python_en.md  tutorials_python_jp.md  tutorials_shm_action_en.md  tutorials_shm_action_jp.md  tutorials_shm_pub_sub_en.md  tutorials_shm_pub_sub_jp.md  tutorials_shm_pub_sub_python_en.md  tutorials_shm_pub_sub_python_jp.md  tutorials_shm_service_en.md  tutorials_shm_service_jp.md
shm_action/: CMakeLists.txt
shm_action/test/: CMakeLists.txt  README.md  run_tests.sh  shm_action_test.cpp
shm_base/: CMakeLists.txt
shm_base/include/: shm_base.hpp
shm_base/src/: ring_buffer.cpp  shared_memory.cpp
shm_base/test/: shm_base_test.cpp
shm_base_c/: CMakeLists.txt
shm_base_c/include/: shm_base_c.h
shm_base_c/src/: shm_base_c.c
shm_pub_sub/: CMakeLists.txt  README.md
shm_pub_sub/include/: shm_pub_sub.hpp  shm_pub_sub_vector.hpp
shm_pub_sub/samples/: CMakeLists.txt  test1.cpp  test1.hpp
shm_pub_sub/scripts/: setup.py.in
shm_pub_sub/src/: shm_pub_sub.cpp  shm_pub_sub_python.cpp
shm_pub_sub/test/: sample_class.hpp  shm_pub_sub_test.cpp
shm_pub_sub_c/: CMakeLists.txt  README.md
shm_pub_sub_c/include/: shm_pub_sub_c.h
shm_pub_sub_c/samples/: sample_c_publisher.c  sample_c_subscriber.c
shm_pub_sub_c/src/: shm_pub_sub_c.c
shm_service/: CMakeLists.txt
shm_service/include/: shm_service.hpp
shm_service/samples/: CMakeLists.txt  test1.cpp
shm_service/src/: shm_service.cpp
shm_service/test/: CMakeLists.txt  README.md  run_tests.sh  shm_service_test.cpp
tools/: CMakeLists.txt
(+105 files in other folders)
